# QuantumFold-Advantage

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .restore_notebook.sh  CHANGELOG.md  CICD_FIXES_APPLIED.md  CITATION.md  CI_CD_SUMMARY.md  COLAB_SETUP.md  COMPREHENSIVE_ENHANCEMENTS.md  COMPREHENSIVE_IMPROVEMENTS.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  ENHANCEMENTS.md  IMPROVEMENTS_COMPLETE.md  INTEGRATION_SUMMARY.md  LICENSE  README.md  TESTING.md  ULTIMATE_TRAINING_GUIDE.md  codecov.yml  docker-compose.yml  pyproject.toml  pyproject.toml.append  pytest.ini  requirements.txt  run_demo.py  train_advanced.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: DISABLED_README.md  advanced-testing.yml  advanced-testing.yml.disabled  autonomous-dependencies.yml  autonomous-documentation.yml  autonomous-improvements.yml  ci-comprehensive.yml  ci-simple.yml  ci.yml  deploy-docs.yml  docker-publish.yml  docs.yml  fix-notebooks.yml  format.yml  lint-fix.yml  notebook-tests.yml  release.yml  status-checks.yml  test-notebooks-execution.yml  test-notebooks.yml  test-report.yml
.jules/: bolt.md
api/: README.md  __init__.py  fastapi_server.py  main.py  requirements.txt  server.py
configs/: advanced_config.yaml  classical_only.yaml  default_config.yaml  quantum_ablation.yaml  quantum_enabled.yaml
deployment/: Dockerfile.api  load_test.py
deployment/k8s/: deployment.yaml  hpa.yaml  service.yaml
deployment/terraform/: main.tf
docs/: ARCHITECTURE.md  BENCHMARK_RUN_2026-04-22.md  COLAB_NOTEBOOK_FIXES.md  COMPLETED_WORK_SUMMARY.md  COMPLETE_TESTING_GUIDE.md  DOCKER_BUILD_OPTIMIZATION.md  EXPERIMENTAL_PROTOCOL.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  NOTEBOOK_ANALYSIS.md  NOTEBOOK_TUTORIAL_GUIDE.md  README_NOTEBOOK_FIXES.md  USAGE.md  api.md
examples/: .notebook_fix_applied  01_getting_started.ipynb  02_a100_ULTIMATE_MAXIMIZED.ipynb  02_a100_production.ipynb  02_a100_production_fixed.ipynb  02_production_training.ipynb  02_quantum_advantage_benchmark.ipynb  02_quantum_vs_classical.ipynb  03_a100_production_MAXIMIZED.ipynb  03_a100_ultimate.ipynb  03_advanced_visualization.ipynb  03_atomic_visualization_showcase.ipynb  04_casp16_benchmark.ipynb  04_casp_benchmark_example.py  05_multichain_complexes.ipynb  06_rna_structure_prediction.ipynb  07_protein_ligand_docking.ipynb  08_quantum_hardware_deployment.ipynb  09_api_cloud_deployment.ipynb  10_af3_head_to_head_benchmark_colab.ipynb  COLAB_NUMPY_FIX.md  INSTALL_CELL_TEMPLATE.md  NOTEBOOK_ORGANIZATION.md  README.md  README_NUMPY_FIX.md  colab_quickstart.ipynb  complete_benchmark.ipynb  complete_production_run.ipynb  fix_numpy_colab.py
hypothesis/: __init__.py  core.py  strategies.py
hypothesis/internal/: __init__.py  observability.py
nbconvert/: __init__.py  preprocessors.py
nbformat/: __init__.py  core.py  v4.py
outputs/: improved_settings.json
paper/: main.tex
results_real/: classical_metrics.npz  comparison_report.txt  generate_report.py  quantum_metrics.npz
scripts/: __init__.py  benchmark.py  check_no_binary_artifacts.py  download_casp_data.py  evaluate_model.py  fetch_and_verify.py  fix_all_linting.sh  fix_notebook_json.py  fix_notebooks.py  fix_numpy_in_notebooks.py  pymol_visualize.py  quantum_experiment.py  run_benchmark.py  run_casp_benchmark.py  run_experiment.py  run_quantum_code_discovery.sh  statistical_evaluation.py  validate_notebooks.py  visualize_comparison.py
src/: __init__.py  advanced_architecture.py  advanced_model.py  advanced_training.py  auto_pipeline.py  benchmarks.py  casp_benchmark.py  cli.py  config.py  data.py  data_processing.py  docking_model.py  experiment_tracking.py  ligand_encoder.py  model.py  pipeline.py  protein_embeddings.py  quantum_layers.py  reproducibility.py  rna_embeddings.py  rna_model.py  statistical_tests.py  statistical_validation.py  train.py  utils.py  visualize.py
src/ablation/: ablation_framework.py
src/analysis/: quantum_advantage.py
src/benchmarks/: __init__.py  baseline_comparison.py  casp16_benchmark.py  casp_evaluation.py  complex_metrics.py  docking_metrics.py  evaluators.py  research_metrics.py  rna_metrics.py
src/classical/: attention.py  evoformer.py  structure_module.py
src/data/: __init__.py  augmentation.py  casp16_loader.py  casp_loader.py  complex_loader.py  hybrid_dataset.py  loader.py  preprocessing.py
src/deployment/: api.py  celery_worker.py  monitoring.py  quantization.py
src/distributed/: trainer.py
src/evaluation/: __init__.py  metrics.py  statistical_tests.py  visualization.py
src/models/: __init__.py  quantumfold_advantage.py  unified.py
src/monitoring/: metrics.py
src/quantum_codes_discovery/: __init__.py  database.py  gf2.py  graph_search.py  monte_carlo.py  pipeline.py  stabilizer.py
src/quantum_hardware/: backend_manager.py  deployment.py  error_mitigation.py  hardware_aware_training.py  transpiler.py
src/training/: __init__.py  callbacks.py  losses.py  optimization.py  trainer.py
src/utils/: __init__.py  checkpoint.py  common.py  config.py  distributed.py  hyperparameter_tuning.py  logging_config.py  logging_utils.py  memory.py  pdb_writer.py  performance.py  profiling.py  security.py  validation.py
src/visualization/: __init__.py  atomic_viz.py  publication_figures.py
tests/: benchmark_ipa_performance.py  conftest.py  test_01_getting_started.py  test_02_quantum_classical.py  test_03_visualization.py  test_advanced_ipa_equivariance.py  test_atomic_viz_confidence.py  test_augmentation.py  test_auto_pipeline.py  test_auxiliary_losses.py  test_benchmarks.py  test_casp16_benchmark.py  test_cli.py  test_colab_quickstart.py  test_data.py  test_embeddings.py  test_hybrid_model.py  test_integration.py  test_integration_full.py  test_model.py  test_notebook_execution.py  test_notebooks.py  test_notebooks_colab.ipynb  test_performance.py  test_production_notebook.py  test_property.py  test_quantum_layers.py  test_regression.py  test_stress.py  test_training.py
tests/unit/: test_execute_preprocessor.py  (+2 more)
(+4 files in other folders)
