[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumfold-advantage"
version = "0.1.0"
description = "Quantum-classical hybrid architecture for protein structure prediction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tommaso R. Marena", email = "marena@cua.edu"}
]
keywords = [
    "quantum computing",
    "protein folding",
    "deep learning",
    "bioinformatics",
    "quantum machine learning",
    "alphafold",
    "pennylane",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "torch>=2.0.0,<3.0.0",
    "autoray>=0.6.11",
    "pennylane>=0.33.0,<0.42.0",
    "pennylane-lightning>=0.33.0,<0.39.0",
    "biopython>=1.81,<2.0.0",
    "biotite>=0.38.0,<1.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0,<7.0.0",
    "h5py>=3.9.0,<4.0.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
protein-lm = [
    "fair-esm>=2.0.0",
    "transformers>=4.35.0,<5.0.0",
    "sentencepiece>=0.1.99,<1.0.0",
    "tokenizers>=0.15.0,<1.0.0",
    "huggingface-hub>=0.19.0",
]

tracking = [
    "wandb>=0.16.0",
    "tensorboard>=2.14.0,<3.0.0",
]

vis = [
    "plotly>=5.17.0,<7.0.0",
    "kaleido>=0.2.1",
    "pillow>=10.0.0,<12.0.0",
]

dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "pytest-xdist>=3.3.0,<4.0.0",
    "pytest-timeout>=2.1.0,<3.0.0",
    "black>=23.0.0,<26.0.0",
    "isort>=5.12.0,<7.0.0",
    "flake8>=6.1.0,<8.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pre-commit>=3.0.0",
]

jupyter = [
    "jupyterlab>=4.0.0,<5.0.0",
    "ipywidgets>=8.1.0,<9.0.0",
    "ipykernel>=6.25.0,<7.0.0",
]

api = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
]

all = [
    "quantumfold-advantage[protein-lm,tracking,vis,dev,jupyter,api]",
]

[project.urls]
Homepage = "https://github.com/Tommaso-R-Marena/QuantumFold-Advantage"
Documentation = "https://github.com/Tommaso-R-Marena/QuantumFold-Advantage/blob/main/README.md"
"Bug Tracker" = "https://github.com/Tommaso-R-Marena/QuantumFold-Advantage/issues"
"Source Code" = "https://github.com/Tommaso-R-Marena/QuantumFold-Advantage"

[project.scripts]
quantumfold-train = "src.cli:train_cli"
quantumfold-predict = "src.cli:predict_cli"
quantumfold-evaluate = "src.cli:evaluate_cli"

[tool.setuptools]
packages = ["src", "src.data", "src.utils"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | examples
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["examples/*", "notebooks/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
    "performance: performance-focused tests",
    "property: property-based tests",
    "regression: regression tests",
    "stress: stress and load tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
